fix(hooks): check trigger role + error management

--- a/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.html
+++ b/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.html
@@ -91,7 +91,7 @@
                                 </li>
                             </ul>
                         </td>
-                        <td>{{h.error}}</td>
+                        <td><pre>{{h.last_error}}</pre></td>
                     </tr>
                     </tbody>
                 </nz-table>
