--- a/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
@@ -56,6 +56,13 @@
 
               }
           }
+
+          td {
+            pre {
+              font-family: inherit;
+              white-space: pre-wrap;
+            }
+          }
       }
 
   }
