--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -1,72 +1,96 @@
-<form nz-form (ngSubmit)="submitForm()">
-	<nz-form-item>
-		<nz-form-control>
-			<input placeholder="Filter workflow runs" nz-input [nzAutocomplete]="filterAutoComplete" [ngModel]="filterText"
-				(ngModelChange)="onFilterChange($event)" #filterInput #filterInputDirective=nzAutocompleteTrigger
-				(click)="onClickInput()" ngDefaultControl [ngModelOptions]="{standalone: true}" />
-			<nz-autocomplete nzBackfill #filterAutoComplete>
-				<nz-auto-option *ngIf="filterText?.length > 0" [nzLabel]="filterText" [nzValue]="filterText">{{filterText}} -
-					submit
-				</nz-auto-option>
-				<nz-auto-optgroup *ngIf="availableFilters.length > 0" nzLabel="Narrow your search">
-					<nz-auto-option *ngFor="let filter of availableFilters" [nzLabel]="computeFilterValue(filter)"
-						[nzValue]="computeFilterValue(filter)"><b>{{filter.key}}:</b> {{filter.example}}
-					</nz-auto-option>
-				</nz-auto-optgroup>
-				<nz-auto-optgroup *ngIf="selectedFilter && selectedFilter.options?.length > 0" nzLabel="Narrow your search">
-					<nz-auto-option *ngFor="let option of selectedFilter.options"
-						[nzLabel]="computeFilterValue(selectedFilter, option)"
-						[nzValue]="computeFilterValue(selectedFilter, option)">{{selectedFilter.key}}:{{option}}
-					</nz-auto-option>
-				</nz-auto-optgroup>
-			</nz-autocomplete>
-		</nz-form-control>
-	</nz-form-item>
-	<nz-form-item>
-		<nz-form-control>
-			<button nz-button nzType="primary"><span nz-icon nzType="search"></span></button>
-		</nz-form-control>
-	</nz-form-item>
-</form>
+<app-resizable-panel growDirection="after" minSize="250" [initialSize]="panelSize"
+	(onGrabbingStart)="panelStartResize()" (onGrabbingEnd)="panelEndResize($event)">
+	<ng-container>
+		<app-projectv2-run-list-sidebar class="sidebar" [project]="project"></app-projectv2-run-list-sidebar>
+	</ng-container>
+</app-resizable-panel>
 
-<nz-list class="run-list" [nzLoading]="loading" nzSize="small" nzNoResult="test">
-	<nz-list-item *ngFor="let run of runs">
-		<ng-container>
-			<nz-list-item-meta [nzTitle]="runTitle" [nzAvatar]="runAvatar" [nzDescription]="runDescription">
-			</nz-list-item-meta>
-			<ng-template #runAvatar>
-				<div class="run-avatar">
-					<span *ngIf="run.status === 'Success'" class="success" nz-icon nzType="check-circle" nzTheme="outline"></span>
-					<span *ngIf="run.status === 'Fail'" class="fail" nz-icon nzType="close-circle" nzTheme="outline"></span>
-					<span *ngIf="run.status === 'Stopped'" class="fail" nz-icon nzType="pause-circle" nzTheme="outline"></span>
-					<span *ngIf="run.status === 'Building'" class="building" nz-icon nzType="play-circle"
-						nzTheme="outline"></span>
-				</div>
-			</ng-template>
-			<ng-template #runTitle>
-				<a
-					[routerLink]="['/projectv2', run.project_key, 'run', 'vcs', run.vcs_server, 'repository', run.repository, 'workflow', run.workflow_name]">{{run.vcs_server}}/{{run.repository}}/{{run.workflow_name}}
-					#{{run.run_number}}</a>
-			</ng-template>
-			<ng-template #runDescription>
-				Commit {{run.contexts.git.sha.substring(0,8)}} by {{run.contexts.git.username}} on repository
-				{{run.contexts.git.server}}/{{run.contexts.git.repository}}
-			</ng-template>
-			<ul nz-list-item-actions>
-				<nz-list-item-action><a
-						[routerLink]="['/projectv2', run.project_key, 'run', 'vcs', run.contexts.git.server, 'repository', run.contexts.git.repository, 'workflow', run.workflow_name]">open</a></nz-list-item-action>
-			</ul>
-		</ng-container>
-	</nz-list-item>
-	<nz-list-empty *ngIf="!loading && totalCount === 0" [nzNoResult]="emptyList"></nz-list-empty>
-</nz-list>
-<ng-template #emptyList>
-	<nz-empty nzNotFoundContent="No result found"></nz-empty>
-</ng-template>
-<div class="footer">
-	<span *ngIf="totalCount > 0">
+<div class="content">
+	<div class="header">
+		<button nz-button nzType="secondary" nz-popconfirm [nzPopconfirmTitle]="saveSearchTemplate"
+			nzPopconfirmPlacement="bottom" (nzOnConfirm)="confirmSaveSearch()" #saveSearchButton=nzPopconfirm><span nz-icon
+				nzType="save"></span></button>
+		<ng-template #saveSearchTemplate>
+			<form class="save-search-form" nz-form (ngSubmit)="submitSaveSearch()">
+				<nz-form-item>
+					<nz-form-control>
+						<input placeholder="Name" [ngModel]="searchName" (ngModelChange)="onSearchNameChange($event)" nz-input
+							ngDefaultControl [ngModelOptions]="{standalone: true}" />
+					</nz-form-control>
+				</nz-form-item>
+			</form>
+		</ng-template>
+		<form nz-form (ngSubmit)="submitForm()">
+			<nz-form-item>
+				<nz-form-control>
+					<input placeholder="Filter workflow runs" nz-input [nzAutocomplete]="filterAutoComplete"
+						[ngModel]="filterText" (ngModelChange)="onFilterTextChange($event)" #filterInput
+						#filterInputDirective=nzAutocompleteTrigger (click)="onClickInput()" ngDefaultControl
+						[ngModelOptions]="{standalone: true}" />
+					<nz-autocomplete nzBackfill #filterAutoComplete>
+						<nz-auto-option *ngIf="filterText?.length > 0" [nzLabel]="filterText" [nzValue]="filterText">{{filterText}}
+							-
+							submit
+						</nz-auto-option>
+						<nz-auto-optgroup *ngIf="availableFilters.length > 0" nzLabel="Narrow your search">
+							<nz-auto-option *ngFor="let filter of availableFilters" [nzLabel]="computeFilterValue(filter)"
+								[nzValue]="computeFilterValue(filter)"><b>{{filter.key}}:</b> {{filter.example}}
+							</nz-auto-option>
+						</nz-auto-optgroup>
+						<nz-auto-optgroup *ngIf="selectedFilter && selectedFilter.options?.length > 0" nzLabel="Narrow your search">
+							<nz-auto-option *ngFor="let option of selectedFilter.options"
+								[nzLabel]="computeFilterValue(selectedFilter, option)"
+								[nzValue]="computeFilterValue(selectedFilter, option)">{{selectedFilter.key}}:{{option}}
+							</nz-auto-option>
+						</nz-auto-optgroup>
+					</nz-autocomplete>
+				</nz-form-control>
+			</nz-form-item>
+			<nz-form-item>
+				<nz-form-control>
+					<button nz-button nzType="primary"><span nz-icon nzType="search"></span></button>
+				</nz-form-control>
+			</nz-form-item>
+		</form>
+	</div>
+
+	<nz-list class="run-list" [nzLoading]="loading" nzSize="small" nzNoResult="test">
+		<nz-list-item *ngFor="let run of runs">
+			<ng-container>
+				<nz-list-item-meta [nzTitle]="runTitle" [nzAvatar]="runAvatar" [nzDescription]="runDescription">
+				</nz-list-item-meta>
+				<ng-template #runAvatar>
+					<div class="run-avatar">
+						<span *ngIf="run.status === 'Success'" class="success" nz-icon nzType="check-circle"
+							nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Fail'" class="fail" nz-icon nzType="close-circle" nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Stopped'" class="fail" nz-icon nzType="pause-circle" nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Building'" class="building" nz-icon nzType="play-circle"
+							nzTheme="outline"></span>
+					</div>
+				</ng-template>
+				<ng-template #runTitle>
+					<a [routerLink]="['/projectv2', run.project_key, 'run', run.id]">{{run.vcs_server}}/{{run.repository}}/{{run.workflow_name}}
+						#{{run.run_number}}</a>
+				</ng-template>
+				<ng-template #runDescription>
+					Commit {{run.contexts.git.sha?.substring(0,8)}} by {{run.contexts.git.username}} on repository
+					{{run.contexts.git.server}}/{{run.contexts.git.repository}}
+				</ng-template>
+				<ul nz-list-item-actions>
+					<nz-list-item-action><a
+							[routerLink]="['/projectv2', run.project_key, 'run', run.id]">open</a></nz-list-item-action>
+				</ul>
+			</ng-container>
+		</nz-list-item>
+		<nz-list-empty *ngIf="!loading && totalCount === 0" [nzNoResult]="emptyList"></nz-list-empty>
+	</nz-list>
+	<ng-template #emptyList>
+		<nz-empty nzNotFoundContent="No result found"></nz-empty>
+	</ng-template>
+	<div *ngIf="totalCount > 0" class="footer">
 		{{totalCount}} results
-	</span>
-	<nz-pagination [nzPageIndex]="1" [nzPageSize]="20" [nzTotal]="totalCount"
-		(nzPageIndexChange)="pageIndexChange($event)"></nz-pagination>
+		<nz-pagination [nzPageIndex]="index" [nzPageSize]="20" [nzTotal]="totalCount"
+			(nzPageIndexChange)="pageIndexChange($event)"></nz-pagination>
+	</div>
 </div>
