--- a/contrib/vscode-cds/webviews/workflow-preview/src/styles.scss
+++ b/contrib/vscode-cds/webviews/workflow-preview/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~normalize.css';
+
+body {
+    height: 100vh;
+}
