--- a/ui/libs/workflow-graph/src/lib/node/fork-join-node.scss
+++ b/ui/libs/workflow-graph/src/lib/node/fork-join-node.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../../../common";
+@import "../../../../../src/common.scss";
 
 :host {
     display: block;
@@ -7,10 +7,10 @@
 }
 
 .node {
-    width: 100%;
-    height: 100%;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
     border: 2px solid $polar_grey_3;
-    border-radius: 3px;
     color: $polar_grey_1;
     padding: 2px;
     background-color: white;
@@ -34,15 +34,6 @@
             border-color: $darkTheme_red;
         }
 
-        &.building {
-            background-color: $darkTheme_night_blue;
-            border-color: $darkTheme_blue;
-        }
-
-        &.scheduling {
-            border-color: $darkTheme_blue;
-        }
-
         &.inactive {
             background-color: $darkTheme_night_grey;
             border-color: grey;
@@ -52,52 +43,6 @@
         &.highlight {
             border-color: white;
         }
-    }
-
-    .icon {
-        display: unset;
-        margin: 0;
-    }
-
-    .ellipsis {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    a {
-        color: $polar_grey_1;
-
-        &:hover {
-            color: $cds_color_teal;
-        }
-    }
-
-    .title {
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        font-size: 1em;
-        padding: 2px 4px 0 4px;
-        align-items: center;
-        text-align: center;
-
-        .name {
-            flex: 1;
-            font-weight: bold;
-        }
-
-        .count {
-            padding: 0 0px 0 2px;
-            text-align: right;
-        }
-    }
-
-    .details {
-        flex: 1;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
     }
 
     &.success {
@@ -112,10 +57,6 @@
 
     &.building {
         background-color: $cds_color_light_teal;
-        border-color: $cds_color_teal;
-    }
-
-    &.scheduling {
         border-color: $cds_color_teal;
     }
 
