--- a/ui/src/app/views/projectv2/project.html
+++ b/ui/src/app/views/projectv2/project.html
@@ -4,7 +4,7 @@
     </div>
     <div class="body">
         <ng-container *ngIf="project">
-            <app-projectv2-left-menu [project]="project"></app-projectv2-left-menu>
+            <app-projectv2-activity-bar [project]="project"></app-projectv2-activity-bar>
             <div class="content">
                 <router-outlet></router-outlet>
             </div>
