--- a/ui/src/app/views/settings/action/form/action.form.scss
+++ b/ui/src/app/views/settings/action/form/action.form.scss
@@ -29,6 +29,10 @@ nz-row {
       padding-top: 5px;
     }
 
+    pre {
+      word-wrap: break-word;
+    }
+
     .paramForm {
       padding-top: 10px;
     }
