--- a/ui/src/app/views/workflow/add/workflow.add.html
+++ b/ui/src/app/views/workflow/add/workflow.add.html
@@ -264,8 +264,7 @@
                                                         <nz-form-item>
                                                             <nz-form-label>Description</nz-form-label>
                                                             <nz-form-control>
-                                                                <markdown [data]="selectedTemplate.description">
-                                                                </markdown>
+                                                                <pre>{{selectedTemplate.description}}</pre>
                                                             </nz-form-control>
                                                         </nz-form-item>
                                                     </nz-col>
