--- a/ui/src/app/views/workflow/add/workflow.add.scss
+++ b/ui/src/app/views/workflow/add/workflow.add.scss
@@ -18,6 +18,10 @@
     margin-top: 10px;
   }
 
+  pre {
+    word-wrap: break-word;
+  }
+  
   nz-button-group {
     width: 100%;
     text-align: center;
