feat(ui,cdn): job run v2 style and refresh

--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -48,7 +48,8 @@
 			</nz-form-item>
 			<nz-form-item>
 				<nz-form-control>
-					<button nz-button nzType="primary"><span nz-icon nzType="search"></span></button>
+					<button nz-button nzType="primary" (click)="refresh($event)"><span nz-icon
+							[nzType]="filterText === previousFilterText ? 'reload' : 'search'"></span></button>
 				</nz-form-control>
 			</nz-form-item>
 		</form>
