--- a/ui/libs/workflow-graph/src/lib/stages-graph.scss
+++ b/ui/libs/workflow-graph/src/lib/stages-graph.scss
@@ -5,13 +5,13 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .svg-wrapper {
     width: 100%;
     display: block;
     height: 100%;
-    position: relative;
     cursor: all-scroll;
 
     ::ng-deep {
@@ -63,33 +63,71 @@
 
 .controls {
     position: absolute;
-    bottom: 65px;
+    bottom: 20px;
     right: 20px;
     display: flex;
     flex-direction: row;
 
     button {
         margin-right: 15px;
+        background-color: #fff;
+
+        :host-context(.night) & {
+            background-color: #141414;
+        }
     }
 }
 
 .hooks {
+    bottom: 20px;
+    left: 20px;
+    position: absolute;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    padding-right: 10px;
+    flex-direction: column;
+    align-items: start;
 
-    nz-avatar {
-        width: 45px;
-        height: 45px;
-        ::ng-deep {
-            i {
-                font-size: 1.3em;
-                padding-top: 10px;
+    .hook {
+        background-color: white;
+        border: 2px solid grey;
+        color: $polar_grey_1;
+        width: auto;
+        border-radius: 15px;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0 10px;
+
+        [nz-icon] {
+            font-size: 18px;
+            margin-right: 5px;
+        }
+
+        &:not(:first-child) {
+            margin-top: 10px;
+        }
+
+        :host-context(.night) & {
+            background-color: $darkTheme_grey_1;
+            color: $darkTheme_grey_6;
+        }
+
+        &.active {
+            border-color: $cds_color_green;
+            background-color: $cds_color_light_green;
+
+            :host-context(.night) & {
+                border-color: $darkTheme_green;
+                background-color: $darkTheme_night_green;
             }
         }
     }
-    nz-avatar.active {
-        background-color:#87d068;
+
+    .hook:hover {
+        border-color: black;
+
+        :host-context(.night) & {
+            border-color: white;
+        }
     }
 }
