--- a/ui/src/app/views/projectv2/run/project.run.scss
+++ b/ui/src/app/views/projectv2/run/project.run.scss
@@ -6,6 +6,14 @@
     height: 100%;
 }
 
+nz-page-header-title {
+    font-size: 16px;
+}
+
+nz-page-header-content {
+    padding: 0 0 0 32px;
+}
+
 .graph {
     flex: 1;
     display: flex;
